<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="NameHelp">Enter your Name</string>
    <string name="ButtonSubmit">Submit</string>
    <string name="ButtonClear">Clear</string>
    <string name="txtTitle">Title</string>
    <string name="txtDesc">Description</string>
    <string name="txtCreatedAt">Created At</string>
    <string name="txtValidTil">Valid until</string>
    <string name="txtPrice">Price</string>
    <string name="txtReseller">Reseller</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="ButtonNewWarrantyCard">create new warranty card</string>
    <string name="ButtonDeleteAllCards">Delete all cards</string>
    <string name="ButtonAdd">Add Card</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_card_list">CardListActivity</string>
    <string name="ButtonListAllWarrantyCards">List all warranty cards</string>
    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="app_name">PhotoByIntent</string>
    <string name="btnIntend">Take Picture</string>
    <string name="btn_browse_list">Browse List</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>

    <string-array name="browse_list_spinner">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
    </string-array>

    <string name="search">Search</string>
    <string name="type_here">Type here. . .</string>
    <string name="quit_app">Quit Warranty</string>
    <string name="title_activity_edit_card">EditCard</string>
    <string name="ButtonUpdate">Update</string>
    <string name="ButtonDeleteThisCard">Delete this card</string>
    <string name="button">Button</string>

</resources>