<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick" >

    <Button
        android:id="@+id/BTcreateNewWarrantyCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:onClick="onClick"
        android:text="@string/ButtonNewWarrantyCard" />

    <Button
        android:id="@+id/BTListWarrantyCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/BTcreateNewWarrantyCard"
        android:layout_marginTop="17dp"
        android:onClick="onClick"
        android:text="@string/ButtonListAllWarrantyCards"  />

    <Button
        android:id="@+id/BTDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/BTListWarrantyCards"
        android:layout_marginTop="18dp"
        android:onClick="onClick"
        android:text="@string/ButtonDeleteAllCards" />
    
    
     <Button
        android:id="@+id/btnIntend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIntend" />

    <Button
        android:id="@+id/btn_browse_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_browse_list" />

  <ImageView
      android:id="@+id/imageView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="invisible" />

  <VideoView
      android:id="@+id/videoView1"
      android:layout_width="fill_parent"
      android:layout_height="20dp"
      android:visibility="invisible" />
    
    

</RelativeLayout>
